# MultiChart-Parameterization

Param/: CMakeLists.txt
Param/include/hj_3rd/hjlib/lmdif/: linalg.h
Param/include/hj_3rd/hjlib/math/: blas_lapack.h  conf.h  polar.h  qp_wrapper.h  quaternion.h  rotation.h  tblas.h
Param/include/hj_3rd/hjlib/sparse/: cached_AAT.h  config.h  convert.h  deprecated.h  format.h  format.h~  io.h  operation.h  operation.h~  solver.h  sparse.h  sparse2.h  sparse_multi_cl.h  type_traits.h
Param/include/hj_3rd/hjlib/sparse_old/: config.h  sparse.h  sparse_multi_cl.h  umf_pack_solver.h
Param/include/hj_3rd/zjucad/matrix/: blas.h  colon.h  configure.h  functional.h  io.h  iterator.h  itr_matrix.h  lapack.h  matrix.h  matrix_expression.h  matrix_proxy.h  operation.h  storage.h
Param/src/AlgLib/: CMakeLists.txt
Param/src/Common/: BasicDataType.h  CMakeLists.txt  HSVColor.h  Heap.cpp  Macro.h  Matrix.cpp  Trackball.cpp  TriangularMesh.h  Utility.cpp  Utility.h  matrix.h
Param/src/Graphite/: CMakeLists.txt
Param/src/Graphite/OGF/basic/common/: common.h
Param/src/Graphite/OGF/basic/debug/: logger.h
Param/src/Graphite/OGF/basic/os/: environment.h
Param/src/Graphite/OGF/basic/types/: counted.cpp  counted.h  smart_pointer.h  types.h
Param/src/Graphite/OGF/math/numeric/: blas.cpp  blas.h  lapack.cpp
Param/src/Graphite/OGF/math/symbolic/: polynomial.cpp  polynomial.h  stencil.h  symbolic.h
Param/src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ParameterControl.cpp  ParameterControl.h  QGLViewer.cpp  QGLViewer.h  main.cpp
Param/src/ModelMesh/: BasicElement.h  CMakeLists.txt  MeshModel.cpp  MeshModel.h  MeshModelAdvancedOp.cpp  MeshModelAdvancedOp.h  MeshModelAuxData.cpp  MeshModelAuxData.h  MeshModelBasicOp.cpp  MeshModelBasicOp.h  MeshModelIO.cpp  MeshModelIO.h  MeshModelKernel.cpp  MeshModelKernel.h  MeshModelRender.cpp  MeshModelRender.h
Param/src/Numerical/: CMakeLists.txt  Heap.h  MatrixConverter.cpp  MatrixConverter.h  MeshSparseMatrix.cpp  MeshSparseMatrix.h  Rotation.cpp  Rotation.h  Trackball.h  blas_lapack_atlas.h  linear_solver.cpp  linear_solver.h  matrix.h  solver.cpp  solver.h
Param/src/OGF/basic/common/: linkage.h
Param/src/OGF/basic/debug/: assert.cpp  assert.h  logger.cpp
Param/src/OGF/basic/os/: environment.cpp
Param/src/OGF/basic/types/: types.cpp
Param/src/OGF/math/common/: common.h
Param/src/OGF/math/numeric/: lapack.h
Param/src/OGF/math/symbolic/: stencil.cpp  symbolic.cpp
Param/src/OpenGL/: CMakeLists.txt  GLContext.cpp  GLContext.h  GLElement.cpp  GLElement.h
Param/src/Param/: Barycentric.cc  Barycentric.h  CMakeLists.txt  ChartCreator.cc  ChartCreator.h  ChartOptimization.cc  ChartOptimization.h  HarmonicDistortion.h  LocalParameter.cc  LocalParameter.h  ParamDistortion.cpp  ParamDistortion.h  ParamDrawer.cc  ParamDrawer.h  ParamPatch.h  Parameter.cc  Parameter.h  Parameterization.cc  Parameterization.h  TransFunction.h  TransFunctor.cc  TransFunctor.h  TriChartCreator.h  TriDistortion.cc  TriDistortion.h  TriParameter.h  TriPatch.h  TriangleTransFunctor.cc  TriangleTransFunctor.h  quad_dof-1.f  quad_dof.h
Param/src/UI/: CMakeLists.txt  EH_Cmd.cpp  EH_Cmd.h  EH_Param.cpp  EH_Param.h  EH_Trackball.cpp  EH_Trackball.h  EventHandlerInterface.h  UIHandler.cpp  UIHandler.h
